[package]
name = "discord-indexmap"
version = "1.4.0"
authors = [
"bluss",
"Josh Stone <cuviper@gmail.com>"
]
documentation = "https://docs.rs/discord-indexmap/"
repository = "https://github.com/discord/indexmap"
license = "Apache-2.0/MIT"
description = """
A fork of the popular `indexmap` library that adds a few extra APIs that are yet to be
upstreamed.
"""

keywords = ["hashmap", "no_std"]
categories = ["data-structures", "no-std"]

build = "build.rs"

[lib]
bench = false

[build-dependencies]
autocfg = "1"
[dependencies]
serde = { version = "1.0", optional = true }
rayon = { version = "1.0", optional = true }

[dev-dependencies]
itertools = "0.8"
rand = "0.6"
quickcheck = { version = "0.8", default-features = false }
fnv = "1.0"
lazy_static = "1.3"
serde_test = "1.0.99"

[features]
# Serialization with serde 1.0
serde-1 = ["serde"]

# for testing only, of course
test_low_transition_point = []
test_debug = []

[profile.bench]
debug = true

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde-1", "rayon"]

[workspace]
members = ["test-nostd"]
